<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/share_btn"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share"
        android:title="@string/share"/>
    <item
        android:id="@+id/new_btn"
        android:icon="@drawable/ic_new"
        android:title="@string/new_page"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/draw_btn"
        android:icon="@drawable/ic_paint_brush"
        android:title="@string/brush"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/erase_btn"
        android:icon="@drawable/ic_004_eraser"
        android:title="@string/erase"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/save_btn"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
</menu>